# nercst

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_source/: nercst.core.baselinefitting.doctree  nercst.core.chopper_wheel.doctree  nercst.core.coords_converter.doctree  nercst.core.doctree  nercst.core.io.doctree  nercst.core.struct.doctree  nercst.doctree  nercst.onthefly.doctree  nercst.onthefly.grid.doctree  nercst.rsky.doctree  nercst.rsky.rsky.doctree  nercst.rsky.rsky_plot.doctree  nercst.skydip.doctree  nercst.skydip.skydip.doctree  nercst.skydip.slydip_plot.doctree  nercst.sunscan.doctree
.github/workflows/: gh-pages.yml  test.yml
_modules/: index.html
_modules/nercst/core/: baselinefitting.html  chopper_wheel.html  coords_converter.html  io.html  struct.html
_modules/nercst/onthefly/: grid.html
_modules/nercst/rsky/: rsky.html  rsky_plot.html
_modules/nercst/skydip/: skydip.html  slydip_plot.html
_source/: nercst.core.baselinefitting.html  nercst.core.chopper_wheel.html  nercst.core.coords_converter.html  nercst.core.html  nercst.core.io.html  nercst.core.struct.html  nercst.html  nercst.onthefly.grid.html  nercst.onthefly.html  nercst.rsky.html  nercst.rsky.rsky.html  nercst.rsky.rsky_plot.html  nercst.skydip.html  nercst.skydip.skydip.html  nercst.skydip.slydip_plot.html  nercst.sunscan.html
_sources/: index.md.txt
_sources/_source/: nercst.core.baselinefitting.rst.txt  nercst.core.chopper_wheel.rst.txt  nercst.core.coords_converter.rst.txt  nercst.core.io.rst.txt  nercst.core.rst.txt  nercst.core.struct.rst.txt  nercst.onthefly.grid.rst.txt  nercst.onthefly.rst.txt  nercst.rsky.rsky.rst.txt  nercst.rsky.rsky_plot.rst.txt  nercst.rsky.rst.txt  nercst.rst.txt  nercst.skydip.rst.txt  nercst.skydip.skydip.rst.txt  nercst.skydip.slydip_plot.rst.txt  nercst.sunscan.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
nercst/: __init__.py
nercst/core/: __init__.py  analysis_params.py  baselinefitting.py  chopper_wheel.py  coords_converter.py  io.py  io_extension.py  multidimensional_coordinates.py  obsvelocity_utils.py  spectrometer_channel.py  struct.py
nercst/onthefly/: __init__.py  grid.py
nercst/pointings/: __init__.py
nercst/rsky/: __init__.py  rsky.py  rsky_plot.py
nercst/skydip/: __init__.py  skydip.py  skydip_plot.py  slydip_plot.py
nercst/sunscan/: __init__.py  sun_scan_beampattern.py  sun_scan_chopper.py
notebooks/: optical_pointing.ipynb
tests/: test_nothing.py
tests/docs/: test_build.py
