[tool.poetry]
name = "nercst"
version = "0.1.0"
description = "NEw reduction and calibration software for telescope "
license = "MIT"
readme = "README.md"
authors = ["Rin Yamada <yamada@a.phys.nagoya-u.ac.jp>", "Demachi Fumika <f.demachi@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/necst-telescope/NERCST"
repository = "https://github.com/necst-telescope/NERCST"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^4.4", python = "<3.8" }
numpy = "^1.19"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
jupyter = "^1.0"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^6.2.5"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

