[tool.poetry]
name = "nercst"
version = "0.1.0"
description = "NEw reduction and calibration software for telescope "
license = "MIT"
readme = "README.md"
authors = ["Rin Yamada <yamada@a.phys.nagoya-u.ac.jp>", "Demachi Fumika <f.demachi@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/necst-telescope/NERCST"
repository = "https://github.com/necst-telescope/NERCST"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
neclib = ">=0.12.2"
necstdb = ">=0.2.7"
numpy = "^1.22"
xarray = {version=">=2022", extras=["accel"]}
xarray-dataclasses = "^1.3.1"
pandas = "^1.5.0"
matplotlib = "^3.6.2"
llvmlite = "^0.39"
numba = "^0.56"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
jupyter = "^1.0"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^6.2.5"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

